Compiler/tests/bad/Functions/03_function.rs
// while context

fn add(x : i32)
{
    return 0;
}

fn main(){
  add(5);
}